--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,3 +27,17 @@ code {
 a.active ~ div {
   transform: translateX(0%);
 }
+
+.error_box {
+  position: fixed;
+  top: 70px;
+  left: 0;
+  background-color: rgb(241, 64, 64);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.floating_button {
+  justify-self: flex-end;
+}
